--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "node-sass": "^4.11.0",
     "react": "^16.8.1",
     "react-dom": "^16.8.1",
+    "react-particles-js": "^2.4.2",
     "react-scripts": "2.1.3"
   },
   "scripts": {
